<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/weekly_matches"
            android:icon="@drawable/basketball"
            android:title="@string/weekly_matches" />
        <item
            android:id="@+id/rank"
            android:icon="@drawable/rank"
            android:title="@string/ranking" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/enter"
            android:title="@string/login" />
    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/welcome"
                android:icon="@drawable/welcome"
                android:title="@string/welcome" />
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/about"
                android:title="@string/about" />
            <item
                android:id="@+id/about_ekasdym"
                android:icon="@drawable/about_ekasdym"
                android:title="@string/about_ekasdym_title" />
        </menu>
    </item>

    <item android:title="@string/rules">
        <menu>
            <item
                android:id="@+id/rules"
                android:icon="@drawable/rules"
                android:title="@string/official" />
            <item
                android:id="@+id/clarification"
                android:icon="@drawable/clarification"
                android:title="@string/clarifications" />
        </menu>
    </item>
</menu>
