<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

   <HorizontalScrollView
       android:layout_width="match_parent"
       android:id="@+id/headerScroll"
       android:layout_height="@dimen/header_height">

      <LinearLayout android:orientation="horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
         <TextView
             android:layout_width="@dimen/cell_width"
             android:id="@+id/name"
             android:textStyle="bold"
             android:layout_marginStart="@dimen/margin"
             android:text="@string/name"
             android:textAllCaps="true"
             android:gravity="center|start"
             android:textColor="@android:color/white"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin" />

         <TextView
             android:layout_width="@dimen/cell_width"
             android:id="@+id/points"
             android:gravity="center|start"
             android:textStyle="bold"
             android:layout_marginStart="@dimen/margin"
             android:text="@string/points"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin" />


         <TextView
             android:layout_width="@dimen/cell_width"
             android:id="@+id/wins"
             android:textStyle="bold"
             android:layout_marginStart="@dimen/margin"
             android:gravity="center|start"
             android:text="@string/wins"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin" />


         <TextView
             android:layout_width="@dimen/cell_width"
             android:id="@+id/loses"
             android:gravity="center|start"
             android:layout_marginStart="@dimen/margin"
             android:textStyle="bold"
             android:text="@string/loses"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin" />

         <TextView
             android:layout_width="@dimen/cell_width"
             android:id="@+id/total_games"
             android:textStyle="bold"
             android:layout_marginStart="@dimen/margin"
             android:gravity="center|start"
             android:text="@string/total_games"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin" />

      </LinearLayout>

   </HorizontalScrollView>

   <androidx.recyclerview.widget.RecyclerView

       android:layout_width="match_parent"
       android:id="@+id/rvClub"
       android:layout_height="match_parent">
   </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>