<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_border"
        android:gravity="top|left"
        android:hint="@string/password"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="fill_parent"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:layout_height="46dp"
        android:background="@drawable/button_border"
        android:gravity="top|left"
        android:hint="@string/password_repeat"
        android:inputType="textMultiLine"
        android:lines="8"
        android:layout_below="@+id/password"
        android:maxLines="10"
        android:minLines="6"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/sent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:layout_below="@id/security_key"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/button_border"
        android:text="@string/submit"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/security_key"
        android:layout_width="fill_parent"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:layout_height="46dp"
        android:layout_below="@id/repeat_password"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/security_key"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        />

</RelativeLayout>
